# standup-bot

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
integrations/: admin.py  models.py
integrations/management/commands/: check_github_permissions.py  setup_integration.py  sync.py
integrations/migrations/: 0001_initial.py  0002_alter_activity_source_and_more.py
integrations/services/: __init__.py  base.py  github.py  linear.py  local_git.py  slack.py
standupbot/: asgi.py  settings.py  urls.py  wsgi.py
standups/: admin.py  apps.py  models.py
standups/management/commands/: standup.py
standups/migrations/: 0001_initial.py  0002_rename_blockers_standup_tomorrow_and_more.py
standups/services/: formatter.py  generator.py  summarizer.py
