[project]
name = "standup-bot"
version = "0.1.0"
description = "Daily standup bot that tracks work across GitHub, Linear, and Slack"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "django-environ>=0.11",
    "anthropic>=0.40",
    "PyGithub>=2.5",
    "httpx>=0.27",
    "slack-sdk>=3.33",
]
